<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/menu_dashboard"
            android:icon="@drawable/home_icon"
            />
        <item
            android:id="@+id/profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/profile_icon"
            />

    </group>

    <item android:title="Topics" android:iconTint="@color/black">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/addTopic"
                    android:title="@string/add_topic"
                    android:icon="@drawable/add"
                    />
                <item
                    android:id="@+id/viewTopics"
                    android:title="@string/view_topics"
                    android:icon="@drawable/view"
                    />
            </group>
        </menu>
    </item>

    <item android:title="Users" android:iconTint="@color/black">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/userList"
                    android:title="User List"
                    android:icon="@drawable/list_icon"
                    />

            </group>
        </menu>
    </item>


    <item android:title="Logout" android:iconTint="@color/black">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon"
                    />
            </group>
        </menu>
    </item>

</menu>