<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/AuthWithEmail"
    android:background="@color/primary"
    tools:context=".Fragments.AuthFragments.Signup_with_email">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="70sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_auth"
        android:id="@+id/parentRelative"
        android:orientation="vertical"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="45dp"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/SignUpWithEmail"
            android:textSize="25sp"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            tools:ignore="NestedWeights" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/EmailSignUp"
            android:layout_weight="1"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textColorHint="@color/primary"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/PasswordSignUp"
            android:inputType="textPassword"
            android:hint="@string/EnterPassword"
            android:textColorHint="@color/primary"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:id="@+id/BtnSignUp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@drawable/button"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/Back"
                android:text="@string/Back"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="start"
                />

            <ProgressBar
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:indeterminateTint="@color/primary"
                android:visibility="invisible"
                android:id="@+id/ProgressSignup"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>